// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Camera should let a user take a screenshot 1`] = `
<img
  alt="screenshot"
  class="centered"
  src="data:image/jpeg;base64,00"
/>
`;

exports[`Camera should let a user take a screenshot 2`] = `
<img
  alt="screenshot"
  class="centered"
  src="data:image/jpeg;base64,01"
/>
`;
